word-wrapping emulation fixes for firefox

--- a/main.sass
+++ b/main.sass
@@ -9,8 +9,8 @@ div.osom-area
   border:      0px solid transparent
   overflow:    none
   color:       transparent
-  white-space: normal
-  word-wrap:   normal
+  white-space: pre-wrap
+  word-wrap:   break-word
 
   span.highlight
     background: yellow
